[package]
name = "harvest-daily"
version = "0.1.0"
authors = ["Arkadiusz Żmudzin <arek@moodup.team>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.7", features = ["json"] }
futures = "0.3.5"
tokio = { version = "0.2.22", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0.114", features = ["derive"] }
envy = "0.4.1"
chrono = { version = "0.4.13", features = ["serde", "clock"] }
confy = "0.4.0"
